[Fix] 닉네임으로 유저 정보 조회 응답 데이터 수정
* 유저 개인정보
* 유저 리뷰 및 핀버디 수
* 검색된 유저와의 관계